assets/css/index.css
@import "./mixins.css";
@import "./tokens.css";
@import "./reset.css";
@import "./layout.css";
@import "./type.css";
@import "./utils.css";
@import "./prism.css";
@import "./ghost/content.css";
/* @import "./ghost/members.css"; */

:root {
  color-scheme: light dark;
  --text-color: light-dark(var(--color-neutral-900), var(--color-neutral-100));
  --text-color-muted: light-dark(var(--color-neutral-600), var(--color-neutral-300));

  :focus-visible {
    outline: 3px solid var(--color-accent-light);
    box-shadow: 0 0 0 6px var(--color-accent-dark);
  }
}

body {
  background-attachment: fixed;
  background-image: url(../images/grain.svg);
  color: var(--text-color);

  @mixin dark-mode {
    background-image: url(../images/grain-light.svg);
  }
}

body > header {
  h1 {
    font-size: var(--font-lg);
  }

  a {
    text-decoration: none;
  }

  nav {
    ul {
      list-style: none;
      padding: 0;
      font-family: var(--font-display);
      font-weight: var(--font-display-weight-base);
      font-size: var(--font-md);
      line-height: var(--font-lg);
    }

    a:hover {
      text-decoration: underline;
    }

    menu {
      @mixin cluster var(--s-1);
      list-style: none;
      padding: 0;
    }

    menu svg {
      font-size: var(--font-lg);
    }

    search button {
      background: none;
      color: inherit;
      padding: 0;
    }
  }
}

masthead a {
  @mixin cluster;
  align-items: center;
}

masthead h1 {
  flex: 1;
}

masthead img {
  max-width: var(--s5);
  border-radius: 50%;
}

body > main {
  h1 {
    padding-block-end: var(--s-1);
    border-block-end: thin solid var(--color-border);
  }
}

article[card] {
  h2 {
    margin-block-start: var(--s-4);
  }
  a {
    text-decoration: none;
    position: relative;
    display: inline-block;
    &:hover {
      color: var(--color-accent-dark);
    }
    &::after {
      content: "";
      position: absolute;
      width: 100%;
      height: 100%;
      inset: 0;
      background: var(--color-accent-light);
      border: 3px solid var(--color-accent-light);
      transform: scaleX(0);
      transform-origin: right;
      transition: transform 0.1s ease-out;
      z-index: -10;
    }
    &:hover::after {
      transform: scaleX(1);
      transform-origin: left;
    }
  }
}

article > header {
  margin-block-end: var(--s2);
}

article post-meta {
  font-size: var(--font-xs);
  color: var(--text-color-muted);
}

article tag-list {
  @mixin cluster var(--s-2);

  margin-block: var(--s0);
  padding: 0;
  list-style: none;

  > * {
    color: var(--color-accent-light);
    background-color: var(--color-accent-med);
    border-radius: var(--s-4);
    padding-inline: var(--s-1);
    padding-block-start: var(--s-5);
    padding-block-end: var(--s-5);
  }
  a {
    text-decoration-style: dotted;
  }
}

article excerpt {
  margin-top: var(--s-2);
  max-inline-size: var(--measure);
}

article picture[feature] {
  @mixin frame 2.35 / 1;
}

article > content {
  :is(h1, h2, h3, h4, h5, h6) {
    margin-block-start: var(--s3);
  }

  p {
    max-inline-size: var(--measure);
  }

  p > code {
    /* Inline code samples */
    font-size: var(--font-sm);
  }
}

article footer {
  border-block-start: thin solid var(--color-border);
  margin-block-start: var(--s3);

  nav ul {
    @mixin cluster var(--s0), space-between;
    align-items: center;
    padding-block: var(--s3);
    padding-inline: 0;
    list-style: none;

    svg {
      @mixin icon;
    }
  }

  aside[comments] {
    padding-block: var(--s3);
    color: #000000;

    @mixin dark-mode {
      color: #ffffff;
    }
  }
}

#ghost-portal-root,
#sodo-search-root {
  margin-block-start: 0;
}

/* .ghost-display { */
/*   @mixin dark-mode { */
/*     background-color: #0f0f0f; */
/*   } */
/* } */

